--- a/work1/index.htm
+++ b/work1/index.htm
@@ -6,9 +6,8 @@
 </head>
 <body>
     <script>
-    alert('赵旭东的第一个网页程序')
+    alert('赵旭东的第一个网页程序');    
     </script>
-    
-    <a href="javascript:alert('Heloo');"></a>
+    <a href="javascript:alert('Hello');">test</a>
 </body>
 </html>
