--- a/practical/1.html
+++ b/practical/1.html
@@ -8,10 +8,31 @@
         margin:0;
         padding:0;
     }
+    .dv1{
+        width: 300px;
+        height: 300px;
+        background-color: red;
+        margin: 100px auto;
+    }
+    .dv1::after{
+        content: "";
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;;
+    }
+    .dv2{
+        vertical-align:middle;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        background: blue;
+    }
     </style>
 
 </head>
 <body>
-    <div style="width: 100px;height: 200px; background-color: red">1</div>
+    <div class="dv1">
+        <div class="dv2"></div>
+    </div>
 </body>
 </html>
