--- a/work2/index.html
+++ b/work2/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script>
+
+    function test(){
        var password =  prompt("请输入赵旭东的密码");
        if(password == '110')
        {
@@ -11,7 +13,11 @@
        }
        else{
            alert('密码错误！')
+           test();
        }
+    }
+    test();
+
        function color(str){
             document.body.style.backgroundColor = str;
        }
