--- a/work8/index.html
+++ b/work8/index.html
@@ -21,4 +21,7 @@
 </body>
 <script src="index.js"></script>
 <script src="goldbach.js"></script>
+<script>
+    console.log(a.toString())
+</script>
 </html>
