--- a/work15/index.html
+++ b/work15/index.html
@@ -10,12 +10,12 @@
         <div class="cart-tittle">赵旭东的购物车</div>
         <table class="cart-table">
             <tr>
-                <th width="110">
+                <th width="130">
                     <span class="cart-all">全选</span>
                     <span>/</span>
                     <span class="cart-unall">全不选</span>
                 </th>
-                <th>商品</th>
+                <th width="300">商品</th>
                 <th width="120">单价</th>
                 <th width="100">数量</th>
                 <th width="120">小计</th>
