--- a/work20/index1.html
+++ b/work20/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>赵旭东的左移与右移</title>
     <script src="../jquery-3.4.1.min.js"></script>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index1.css">
 </head>
 <body>
 <div id="tittle">赵旭东的左移与右移</div>
