--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <a href="work20/index1.html">work20-1 选项移动</a><br>
     <a href="work21/index.html">work21 轮播图</a><br>
     <a href="work21/index1.html">work21-1 ajax无刷新提交评论</a><br>
+    <a href="work22/index.html">work22 扫雷</a><br>
+    <a href="work23/index.html">work23 2048</a><br>
     持续更新中。。。。。。
 </body>
 </html>
